apps/default/qbittorent/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: qbittorrent
  namespace: default
  labels:
    app: qbittorrent
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          volumeMounts:
            - name: qbittorrent-config-volume
              mountPath: /config
            - name: qbittorrent-downloads-volume
              mountPath: /downloads
        - name: gluetun
          image: qmcgaw/gluetun:latest
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
            allowPrivilegeEscalation: false
        - name: port-forward
          image: ghcr.io/bjw-s/gluetun-qb-port-sync
          volumeMounts:
            - name: port-forward-config
              mountPath: /config
      volumes:
        - name: qbittorrent-config-volume
          persistentVolumeClaim:
            claimName: qbittorrent-config-pvc
        - name: qbittorrent-downloads-volume
          persistentVolumeClaim:
            claimName: qbittorrent-downloads-pvc
        - name: port-forward-config
          emptyDir: {}
