apps/default/qbittorent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorent
  namespace: default
  annotations:
    argocd.argoproj.io/sync-wave: "100"
spec:
  selector:
    app: qbittorent
  ports:
    - targetPort: 8080
      port: 8080
