apps/default/qbittorent/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorent
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "100"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qbittorent.bhamm-lab.com`)
      kind: Rule
      middlewares:
        - name: default-headers
      services:
        - name: qbittorent
          port: 8080
  tls:
    secretName: bhamm-lab-tls
